# djstripe-example-project

./: .env.dist  .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: linter.yml
djstripe_example/: asgi.py  settings.py  urls.py  views.py  wsgi.py
djstripe_example/migrations/: 0001_initial.py  0002_create_admin_user.py
djstripe_example/templates/: base.html  checkout_redirect.html  home.html
