[tool.poetry]
name = "djstripe-example-project"
version = "0.1.0"
description = ""
authors = ["Jerome Leclanche <jerome@leclan.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.3"
dj-stripe = {git = "https://github.com/dj-stripe/dj-stripe.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
manage = "manage:main"
makemigrations = "manage:makemigrations"
migrate = "manage:migrate"
start = "manage:start"
dev = "manage:dev"

[tool.isort]
profile = "black"
