[tool.poetry]
name = "djstripe-example-project"
version = "0.1.0"
description = ""
authors = ["Jerome Leclanche <jerome@leclan.ch>"]
# Uncomment if using a local copy
# package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
# Choose between using the latest verion or a local copy
dj-stripe = {git = "https://github.com/dj-stripe/dj-stripe.git"}
# dj-stripe = { path = "../dj-stripe" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
manage = "manage:main"
makemigrations = "manage:makemigrations"
migrate = "manage:migrate"
start = "manage:start"
dev = "manage:dev"

[tool.isort]
profile = "black"
